Fix: Added FAQ, updeated header, changed logo, changed hero text, added scropp animation for header

--- a/components/pages/home/HeroSection/index.module.scss
+++ b/components/pages/home/HeroSection/index.module.scss
@@ -76,7 +76,7 @@
     .dottedBoxTop {
       position: absolute;
       top: 0px;
-      left: -70px;
+      left: -150px;
       z-index: 0;
       width: 100px;
       height: auto;
